# cryptosym

./: .clang-format  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  MANIFEST.in  README.md  README_old.md  TODO.txt  dataset_generator  eval.py  generate_all_hashes.sh  generate_graphviz.py  kompile.sh  main  plot_iterations.py  process_stats.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
belief_propagation/: .gitignore  CMakeLists.txt  kompile.sh
belief_propagation/config/: addConst.yaml  andConst.yaml  nonLossyPseudoHash.yaml  sha256.yaml  shiftLeft.yaml  shiftRight.yaml  xorConst.yaml
belief_propagation/include/belief_propagation/: dataset.hpp  factor.hpp  factor_graph.hpp  inference_tool.hpp  probability.hpp  variable_assignments.hpp
belief_propagation/include/hash_reversal/: dataset.hpp  factor_graph.hpp  inference_tool.hpp
belief_propagation/include/utils/: config.hpp  convenience.hpp  stats.hpp
belief_propagation/src/: main.cpp
belief_propagation/src/belief_propagation/: dataset.cpp  factor.cpp  factor_graph.cpp  inference_tool.cpp  probability.cpp
belief_propagation/src/hash_reversal/: factor_graph.cpp  inference_tool.cpp  probability.cpp
cmake/: BuildCryptoPP.cmake  ForceStaticLibs.cmake
cryptosym/: __init__.py  ortools_cp_solver.py  sym_sha512.py
dataset_generation/: bit.py  factor.py  generate.py  hash_funcs.py  nsha256.py  sym_bit_vec.py  symbolic.c
dataset_generator/: CMakeLists.txt  kompile.sh  main
dataset_generator/include/: bit.hpp  cmsat_solver.hpp  config.hpp  factor.hpp  hash_funcs.hpp  sha256.hpp  solver.hpp  sym_bit_vec.hpp  sym_hash.hpp  utils.hpp
dataset_generator/src/: bit.cpp  cmsat_solver.cpp  factor.cpp  hash_funcs.cpp  main.cpp  sha256.cpp  solver.cpp  sym_bit_vec.cpp  sym_hash.cpp
deep_learning/: controller.py  dataset.py  factor.py  loss.py  main.py  models.py  supervised_learning.py
graph_viz/: graph_viz.pde
ml/: .gitignore  CMakeLists.txt  Makefile  TODO.txt  bp_test.py  cnf2graph.py  config.py  dataset.py  gen.py  generate_all.sh  generate_all_hashes.sh  generate_dataset.py  generator.py  hashsat.py  logic_gate.py  loss_func.py  main.py  mlp.py  nsha256.py  opts.py  problem.py  process_stats.py  run_tests.py  scheduler.py  solver.py  tests.py  train_ml.py  utils.py  vi.py  visualization.py  visualize.py
ml/belief_propagation/config/: add.yaml  invert.yaml  lossyPseudoHash.yaml  orConst.yaml
ml/belief_propagation/include/hash_reversal/: factor.hpp  probability.hpp
ml/belief_propagation/src/: main.cpp
ml/belief_propagation/src/hash_reversal/: dataset.cpp  factor.cpp
ml/config/: add.yaml  addConst.yaml  andConst.yaml  hash_and_input.yaml  invert.yaml  lossyPseudoHash.yaml  map_from_input.yaml  nonLossyPseudoHash.yaml  orConst.yaml  pseudoHash.yaml  pseudo_hash.yaml  sha256.yaml  shiftLeft.yaml  shiftRight.yaml  xorConst.yaml
ml/cpp_code/: .gitignore  Makefile  main
ml/cpp_code/config/: default.yaml  hash_and_input.yaml  map_from_input.yaml  pseudo_hash.yaml  sha256.yaml  test.yaml
ml/cpp_code/include/hash_reversal/: dataset.hpp  factor_graph.hpp  probability.hpp  undirected_graph.hpp  variable_assignment.hpp
ml/cpp_code/include/utils/: config.hpp  convenience.hpp
ml/cpp_code/src/: main.cpp
ml/cpp_code/src/hash_reversal/: dataset.cpp  factor_graph.cpp  probability.cpp  undirected_graph.cpp
ml/cpp_code/src/utils/: config.cpp
ml/data/: .gitignore  bn_directed.yaml  bn_undirected.yaml  compute_graph.m  ihats.m
ml/dataset_generation/: bit.py  factor.py  generate.py  generate_dataset.py  hash_funcs.py  hash_functions.py  nsha256.py  pseudo_hashes.py  sym_bit_vec.py  symbolic.py  test.py
ml/deep_learning/: controller.py  dataset.py  loss.py  main.py  models.py
ml/graphs/: directed_graph.py  factor_graph.py  undirected_graph.py
ml/include/hash_reversal/: bayes_net.hpp  dataset.hpp  factor.hpp  factor_graph.hpp  inference_tool.hpp  probability.hpp  variable_assignment.hpp  variable_assignments.hpp
ml/include/utils/: config.hpp  convenience.hpp  stats.hpp
ml/logic/: cnf.py  gate.py  ggnn_graph.py  mis.py  problem.py
ml/models/: base_model.py  encoder_decoder.py  gated_graph_conv.py  ggc_up_down.py  ggnn.py  global_sage_conv.py  hashsat.py  layer_norm_lstm.py  mlp.py  neurosat.py
ml/optimization/: factor.py  gnc.py  gnc_solver.py  gradient_solver.py  main.py  solver.py
ml/representation/: ggnn_graph.py
ml/samples/: md5_d1_cnf.txt  md5_d1_sym.txt  sha256_d16_sym.txt  sha256_d32_sym.txt  sha256_d64_sym.txt  sha256_d8_cnf.txt  sha256_d8_sym.txt
ml/solver/: basic_solver.py  kamis.py  tree_solver.py
ml/src/: main.cpp
ml/src/hash_reversal/: bayes_net.cpp  dataset.cpp  factor.cpp  factor_graph.cpp  inference_tool.cpp  probability.cpp
ml/src/utils/: config.cpp
ml/utils/: config.py  constants.py  data_analysis.py  log.py  probability.py
preimage/: CMakeLists.txt  main
preimage/include/: bit.hpp  cmsat_solver.hpp  config.hpp  factor.hpp  hash_funcs.hpp  problem_instance.hpp  sha256.hpp  solver.hpp  sym_bit_vec.hpp  sym_hash.hpp  sym_md5.hpp  sym_ripemd160.hpp  tests.hpp  utils.hpp
preimage/include/bp/: bp_solver.hpp  graph.hpp  node.hpp  params.hpp  prior_factor.hpp
preimage/include/cmsat/: cmsat_solver.hpp
preimage/include/core/: bit.hpp  config.hpp  solver.hpp  sym_hash.hpp  utils.hpp
preimage/include/hashing/: hash_funcs.hpp  sym_md5.hpp  sym_ripemd160.hpp  sym_sha256.hpp
preimage/include/lbp/: factor_graph.hpp  lbp_factor.hpp  params.hpp  probability.hpp
preimage/include/ortools_cp/: ortools_cp_solver.hpp
preimage/src/: bit.cpp  cmsat_solver.cpp  factor.cpp  hash_funcs.cpp  main.cpp  problem_instance.cpp  sha256.cpp  solver.cpp  sym_bit_vec.cpp  sym_hash.cpp  sym_md5.cpp  sym_ripemd160.cpp  sym_sha256.cpp
preimage/src/bp/: bp_solver.cpp  graph.cpp  node.cpp
preimage/src/cmsat/: cmsat_solver.cpp
preimage/src/core/: factor.cpp  solver.cpp  sym_hash.cpp
preimage/src/hashing/: hash_funcs.cpp  sym_hash.cpp  sym_md5.cpp  sym_ripemd160.cpp  sym_sha256.cpp
preimage/src/lbp/: factor_graph.cpp  lbp_factor.cpp  probability.cpp
(+139 files in other folders)
