[build-system]
requires = [
    "setuptools>=42",
    "cmake>=3.22",
    "ninja",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"

[tool.cibuildwheel]
archs = ["auto64"]
skip = "pp*"
test-requires = "pytest"
test-command = "cd $(mktemp -d) && python -m pytest {project}/tests"
test-skip = "*_arm64 *_universal2:arm64"
before-build = "rm -rf {project}/build"

[tool.cibuildwheel.windows]
test-command = "cd $(mktemp -d) && python -m pytest {project}\\tests"

[tool.cibuildwheel.macos]
archs = ["x86_64", "universal2"]
