[build-system]
requires = [
    "setuptools>=42",
    "cmake>=3.22",
    "ninja",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
norecursedirs = ["extern", "_deps"]

[tool.cibuildwheel]
archs = ["auto64"]
skip = "pp*"
before-build = "rm -rf {project}/build"
test-requires = ["pytest", "numpy>=1.19"]
test-command = "pytest {project} --import-mode=importlib -v"
test-skip = "*_arm64 *_universal2:arm64"
# Will cause the wheel to be installed with `pip install <wheel_file>[ortools]`
test-extras = ["ortools"]

[[tool.cibuildwheel.overrides]]
# OR-Tools does not have a pre-built binary wheel for musllinux
select = "*musllinux*"
test-extras = []

[tool.cibuildwheel.macos]
archs = ["x86_64", "universal2"]
