[metadata]
name = cryptosym
version = file: VERSION
author = Trevor Phillips
author_email = trevphil3@gmail.com
maintainer = Trevor Phillips
maintainer_email = trevphil3@gmail.com
url = https://github.com/trevphil/cryptosym
description = Symbolic bitvector computation with cryptographic applications
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
keywords = cryptography, satisfiability, sha256, sat solver, computational graph
license = CC BY-NC-SA 4.0
license_file = LICENSE.md
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: C++
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Security :: Cryptography
project_urls =
    Documentation = https://cryptosym.readthedocs.io
    Issue Tracker = https://github.com/trevphil/cryptosym/issues

[options]
python_requires = >=3.9
zip_safe = False
packages =
    cryptosym
    cryptosym.tests
install_requires =
    numpy >=1.19

[options.extras_require]
ortools = ortools==9.3.10497

[flake8]
max-line-length = 89
extend-ignore = E203
exclude = docs/conf.py
